manifests/services/qbittorrent/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: webui
      nodePort: 30081
  selector:
    app: qbittorrent
