manifests/services/qbittorrent/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.home`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
